fixed broken css

--- a/front-end/src/footer.css
+++ b/front-end/src/footer.css
@@ -375,7 +375,7 @@ h6 {
 }
 
 
-.block {
+.queue-block {
     z-index: 0;
     overflow: hidden;
     cursor: pointer;
@@ -392,7 +392,7 @@ h6 {
     filter: brightness(100%) hue-rotate(0deg);
   }
   
-  .block:hover {
+  .queue-block:hover {
     filter: brightness(115%) hue-rotate(30deg);
     transition: all 1s;
   }
@@ -413,7 +413,7 @@ h6 {
     
   }
   
-  .block .cover {
+  .queue-block .cover {
     width: 100%;
     height: 100%;
     background: rgba(0,0,0, 0.6);
@@ -436,28 +436,6 @@ h6 {
       white-space: nowrap;
     }
 
-  .circle3 {
-    background: black;
-    width: 3em;
-    height: 3em;
-    border-radius: 50%;
-    position: absolute;
-    top: 5em;
-    left: 20em;
-    opacity: 1;
-  }
-  
-  .circle5 {
-    background: black;
-    width: 5em;
-    height: 5em;
-    border-radius: 50%;
-    position: absolute;
-    bottom: 2em;
-    left: 3em;
-    opacity: 1;
-  }
-  
   
   .circle4 {
     background: black;
